# semgrep-rules-manager

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.pypi.md  README.pypi.template.md  README.template.md  SECURITY.md  action.yaml  debug_generate.py  pyproject.toml  sources.yaml
.github/workflows/: generate_readme.yaml  generate_readmes.yaml  generate_readmes_and_index.yaml  semgrep-with-rules.yaml  semgrep.yaml
actions/generate_readme/: generate_readme.py
actions/generate_readmes/: generate_readmes.py
actions/generate_rules_index/: generate_rules_index.py
explorer/: index.html
semgrep-rules-manager/: cli.py  core.py  exception.py  sources.py
semgrep_rules_manager/: cli.py  core.py  helpers.py  rule.py  rules_file.py  sources.py
semgrep_rules_manager/data/: index.json  sources.yaml
snap/: snapcraft.yaml
