[tool.poetry]
name = "semgrep-rules-manager"
version = "0.1.0"
description = "Manager of third-party Semgrep rules"
authors = ["George-Andrei Iosif <andrei.iosif@canonical.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "semgrep-rules-manager"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.6"
pyyaml = "^6.0.1"
gitpython = "^3.1.32"
rich = "^13.4.2"

[tool.poetry.scripts]
semgrep-rules-manager = 'semgrep-rules-manager.cli:main'

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.7.0"

[tool.black]
line-length = 79
preview = true
include = '\.pyi?$'
extend-exclude = """
(
    ^/.venv/*
)
"""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
