[tool.poetry]
name = "semgrep_rules_manager"
version = "0.1.0"
description = "Manager of third-party Semgrep rules"
authors = ["George-Andrei Iosif <andrei.iosif@canonical.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "semgrep_rules_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.6"
pyyaml = "^6.0.1"
gitpython = "^3.1.32"
rich = "^13.4.2"

[tool.poetry.scripts]
semgrep-rules-manager = 'semgrep_rules_manager.cli:main'
generate-readme = 'actions.generate_readme.generate_readme:main'

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.7.0"
isort = "^5.12.0"

[tool.poetry.group.actions.dependencies]
tabulate = "^0.9.0"

[tool.black]
line-length = 79
preview = true
include = '\.pyi?$'
extend-exclude = """
(
    ^/.venv/*
)
"""

[tools.isort]
line_length = 79
profile = "black"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
